# shr

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  dist-workspace.toml
.github/workflows/: ci.yaml  docker.yaml  lint_pr_title.yml
crates/rust-template/: Cargo.toml  README.md
crates/rust-template/src/: main.rs
crates/shr/: Cargo.toml  README.md
crates/shr-browser/: Cargo.toml  README.md  build.rs
crates/shr-browser/src/: args.rs  main.rs  ui.rs
crates/shr-browser/ui/: app-window.slint
crates/shr-cli/: Cargo.toml  README.md
crates/shr-cli/src/: args.rs  main.rs
crates/shr/src/: event.rs  lib.rs  path.rs  scan.rs  utils.rs
crates/shr/src/scan/: compio_backend.rs  tokio_backend.rs
crates/shr/src/scan/compio_backend/: rt.rs
scripts/: draft-release.mjs
