[package]
name = "shr-browser"
description = "shr hunts and reports disk space."
categories = ["compilers"]
keywords = ["language", "compiler"]
authors.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "shr-browser"
path = "src/main.rs"

[dependencies]

anyhow.workspace = true
clap.workspace = true
open = "5"
slint = "1.8.0"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = {version = "0.1", features = ["channel"]}
futures = "0.3"
shr = { workspace = true, features = ["serde"] }
serde_json.workspace = true
tiny_http = "0.12"
tokio = { workspace = true, optional = true }

[build-dependencies]
slint-build = "1.8.0"

[features]
default = ["tokio"]
tokio = ["dep:tokio", "shr/tokio"]

[lints]
workspace = true
