[package]
name = "shr-cli"
description = "CLI for shr. shr hunts and reports disk space."
categories = ["compilers"]
keywords = ["language", "compiler"]
authors.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "shr"
path = "src/main.rs"

[dependencies]

anyhow.workspace = true
clap.workspace = true
shr = { workspace = true, features = ["serde"] }
serde_json.workspace = true
tokio = { workspace = true, optional = true }

[features]
default = ["tokio"]
tokio = ["dep:tokio", "shr/tokio"]

[lints]
workspace = true
